Revert "Upgrading Java and Spring Boot Versions"